--- a/data_collection_app/.gitignore
+++ b/data_collection_app/.gitignore
@@ -41,3 +41,15 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+windows/
+
+web/
+
+macos/
+
+linux/
+
+build/
+
+.idea/
